[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Noam94 <noam.g79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
openai = "0.28.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
deepgram-sdk = ">=3.0,<4.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
